--- a/Time Series.ipynb
+++ b/Time Series.ipynb
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "3cef8903",
    "metadata": {},
    "outputs": [],
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "95b47669",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        "[144 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "6347c663",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "              dtype='datetime64[ns]', length=144, freq='MS')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "8a5d85b0",
    "metadata": {},
    "outputs": [],
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "38e3e8ae",
    "metadata": {},
    "outputs": [
@@ -921,7 +921,7 @@
        "[144 rows x 5 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "f9c2b7ba",
    "metadata": {},
    "outputs": [],
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "84e31472",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1061,7 @@
        "[144 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "0394d8d8",
    "metadata": {},
    "outputs": [],
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "c154931d",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1103,7 @@
        "Freq: MS, Name: Tractor-Sales, Length: 144, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "59f4047a",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1124,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1147,8 +1147,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "987cbd04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decompose\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0cd274a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decompose = seasonal_decompose(ts_sales)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9355a3b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2003-01-01   NaN\n",
+       "2003-02-01   NaN\n",
+       "2003-03-01   NaN\n",
+       "2003-04-01   NaN\n",
+       "2003-05-01   NaN\n",
+       "              ..\n",
+       "2014-08-01   NaN\n",
+       "2014-09-01   NaN\n",
+       "2014-10-01   NaN\n",
+       "2014-11-01   NaN\n",
+       "2014-12-01   NaN\n",
+       "Freq: MS, Name: trend, Length: 144, dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decompose.trend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "675c44a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2003-01-01   -68.763889\n",
+       "2003-02-01   -66.434343\n",
+       "2003-03-01    -1.638889\n",
+       "2003-04-01    29.952020\n",
+       "2003-05-01    75.876263\n",
+       "                ...    \n",
+       "2014-08-01    90.482323\n",
+       "2014-09-01   -14.233586\n",
+       "2014-10-01   -61.328283\n",
+       "2014-11-01   -88.680556\n",
+       "2014-12-01   -38.763889\n",
+       "Freq: MS, Name: seasonal, Length: 144, dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decompose.seasonal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "6525c456",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2003-01-01   NaN\n",
+       "2003-02-01   NaN\n",
+       "2003-03-01   NaN\n",
+       "2003-04-01   NaN\n",
+       "2003-05-01   NaN\n",
+       "              ..\n",
+       "2014-08-01   NaN\n",
+       "2014-09-01   NaN\n",
+       "2014-10-01   NaN\n",
+       "2014-11-01   NaN\n",
+       "2014-12-01   NaN\n",
+       "Freq: MS, Name: resid, Length: 144, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decompose.resid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d94754a",
    "metadata": {},
    "outputs": [],
    "source": []
