--- a/Time Series.ipynb
+++ b/Time Series.ipynb
@@ -1271,7 +1271,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2471ecb8fd0>]"
+       "[<matplotlib.lines.Line2D at 0x19e4789bdc0>]"
       ]
      },
      "execution_count": 29,
@@ -1304,7 +1304,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2471ed1c700>]"
+       "[<matplotlib.lines.Line2D at 0x19e478e24f0>]"
       ]
      },
      "execution_count": 30,
@@ -1371,7 +1371,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2471eed0af0>]"
+       "[<matplotlib.lines.Line2D at 0x19e47ac7370>]"
       ]
      },
      "execution_count": 32,
@@ -1557,7 +1557,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2471f0b74c0>]"
+       "[<matplotlib.lines.Line2D at 0x19e47c7bee0>]"
       ]
      },
      "execution_count": 38,
@@ -1590,7 +1590,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2471f0f22b0>]"
+       "[<matplotlib.lines.Line2D at 0x19e47cc86a0>]"
       ]
      },
      "execution_count": 39,
@@ -1623,7 +1623,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2471f00c280>]"
+       "[<matplotlib.lines.Line2D at 0x19e47c56100>]"
       ]
      },
      "execution_count": 40,
@@ -1656,7 +1656,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2471ef511c0>]"
+       "[<matplotlib.lines.Line2D at 0x19e4501aa90>]"
       ]
      },
      "execution_count": 41,
@@ -1689,7 +1689,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2471f00e460>]"
+       "[<matplotlib.lines.Line2D at 0x19e47b9f670>]"
       ]
      },
      "execution_count": 42,
@@ -1723,7 +1723,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2471f174910>]"
+       "[<matplotlib.lines.Line2D at 0x19e48d153d0>]"
       ]
      },
      "execution_count": 43,
@@ -1757,7 +1757,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x247201aea00>]"
+       "[<matplotlib.lines.Line2D at 0x19e48d84100>]"
       ]
      },
      "execution_count": 44,
@@ -1791,7 +1791,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2472021ad90>]"
+       "[<matplotlib.lines.Line2D at 0x19e48df10a0>]"
       ]
      },
      "execution_count": 45,
@@ -1876,7 +1876,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x24720260640>]"
+       "[<matplotlib.lines.Line2D at 0x19e48e2e2e0>]"
       ]
      },
      "execution_count": 47,
@@ -1909,7 +1909,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x247202b0790>]"
+       "[<matplotlib.lines.Line2D at 0x19e48e7b670>]"
       ]
      },
      "execution_count": 48,
@@ -1942,7 +1942,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x24720350400>]"
+       "[<matplotlib.lines.Line2D at 0x19e48f1d550>]"
       ]
      },
      "execution_count": 49,
@@ -2912,7 +2912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 55,
    "id": "084320bc",
    "metadata": {},
    "outputs": [
@@ -3183,7 +3183,7 @@
        "Dec    567.0  605.0  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3194,7 +3194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 56,
    "id": "40522522",
    "metadata": {},
    "outputs": [
@@ -3204,7 +3204,7 @@
        "<AxesSubplot:xlabel='Month'>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3227,7 +3227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 57,
    "id": "612c43cb",
    "metadata": {},
    "outputs": [
@@ -3237,7 +3237,7 @@
        "<AxesSubplot:xlabel='year'>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3260,7 +3260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 58,
    "id": "ae220562",
    "metadata": {},
    "outputs": [
@@ -3379,7 +3379,7 @@
        "[144 rows x 3 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3390,7 +3390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 59,
    "id": "a9db3761",
    "metadata": {},
    "outputs": [
@@ -3411,7 +3411,7 @@
        "Freq: MS, Name: Tractor-Sales, Length: 144, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3422,7 +3422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 60,
    "id": "5a5ac3cf",
    "metadata": {},
    "outputs": [
@@ -3432,7 +3432,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3455,7 +3455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 61,
    "id": "63ca8866",
    "metadata": {},
    "outputs": [
@@ -3473,7 +3473,7 @@
        "<AxesSubplot:xlabel='Tractor-Sales', ylabel='Density'>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3497,17 +3497,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 66,
    "id": "8d2ca461",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# augmented dicky fuller test to check the stationary and non-stationay data\n",
     "from statsmodels.tsa.stattools import adfuller"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 67,
    "id": "046249df",
    "metadata": {},
    "outputs": [
@@ -3524,13 +3525,13 @@
        " 1082.5357724796872)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adfuller(ts_sales)"
+    "adfuller(ts_sales)  # returnig p value and confident interval "
    ]
   },
   {
