--- a/Time Series.ipynb
+++ b/Time Series.ipynb
@@ -1271,7 +1271,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ecb6df10>]"
+       "[<matplotlib.lines.Line2D at 0x2738711e4f0>]"
       ]
      },
      "execution_count": 29,
@@ -1304,7 +1304,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ebb07370>]"
+       "[<matplotlib.lines.Line2D at 0x27386088490>]"
       ]
      },
      "execution_count": 30,
@@ -1371,7 +1371,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ecc65d30>]"
+       "[<matplotlib.lines.Line2D at 0x2738736c730>]"
       ]
      },
      "execution_count": 32,
@@ -1557,7 +1557,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ecfa9340>]"
+       "[<matplotlib.lines.Line2D at 0x273875320d0>]"
       ]
      },
      "execution_count": 38,
@@ -1590,7 +1590,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ed00e280>]"
+       "[<matplotlib.lines.Line2D at 0x2738756f730>]"
       ]
      },
      "execution_count": 39,
@@ -1623,7 +1623,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ece93d00>]"
+       "[<matplotlib.lines.Line2D at 0x273874d8430>]"
       ]
      },
      "execution_count": 40,
@@ -1656,7 +1656,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ecc65eb0>]"
+       "[<matplotlib.lines.Line2D at 0x27387416dc0>]"
       ]
      },
      "execution_count": 41,
@@ -1689,7 +1689,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1eceb5e80>]"
+       "[<matplotlib.lines.Line2D at 0x2738742fdc0>]"
       ]
      },
      "execution_count": 42,
@@ -1723,7 +1723,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ee041130>]"
+       "[<matplotlib.lines.Line2D at 0x273885bcf40>]"
       ]
      },
      "execution_count": 43,
@@ -1757,7 +1757,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ee0ad3a0>]"
+       "[<matplotlib.lines.Line2D at 0x27388635130>]"
       ]
      },
      "execution_count": 44,
@@ -1791,7 +1791,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ee118730>]"
+       "[<matplotlib.lines.Line2D at 0x273886a54f0>]"
       ]
      },
      "execution_count": 45,
@@ -1876,7 +1876,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ee1540d0>]"
+       "[<matplotlib.lines.Line2D at 0x273886d3fd0>]"
       ]
      },
      "execution_count": 47,
@@ -1909,7 +1909,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ee1b71f0>]"
+       "[<matplotlib.lines.Line2D at 0x27388737f40>]"
       ]
      },
      "execution_count": 48,
@@ -1942,7 +1942,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c1ee24a0a0>]"
+       "[<matplotlib.lines.Line2D at 0x273887c8be0>]"
       ]
      },
      "execution_count": 49,
@@ -3536,7 +3536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 64,
    "id": "796cbcd1",
    "metadata": {},
    "outputs": [],
@@ -3564,7 +3564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 65,
    "id": "6ed0de2f",
    "metadata": {},
    "outputs": [
@@ -3603,7 +3603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 66,
    "id": "103f1a86",
    "metadata": {},
    "outputs": [],
@@ -3614,7 +3614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 67,
    "id": "e9587de7",
    "metadata": {},
    "outputs": [
@@ -3635,7 +3635,7 @@
        "Freq: MS, Name: Tractor-Sales, Length: 144, dtype: float64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3646,7 +3646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 68,
    "id": "235241f7",
    "metadata": {
     "scrolled": true
@@ -3687,7 +3687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 69,
    "id": "617d8093",
    "metadata": {},
    "outputs": [],
@@ -3698,7 +3698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 70,
    "id": "67cc8705",
    "metadata": {},
    "outputs": [
@@ -3737,7 +3737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 71,
    "id": "44e996f7",
    "metadata": {},
    "outputs": [
@@ -3778,7 +3778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 72,
    "id": "65fd2bc7",
    "metadata": {},
    "outputs": [],
@@ -3790,7 +3790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 73,
    "id": "8affb595",
    "metadata": {},
    "outputs": [
@@ -3801,7 +3801,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3824,7 +3824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 74,
    "id": "2b5cb928",
    "metadata": {},
    "outputs": [
@@ -3847,7 +3847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 75,
    "id": "e8790f03",
    "metadata": {},
    "outputs": [
@@ -3866,7 +3866,7 @@
        "<Figure size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3889,7 +3889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 76,
    "id": "fccb19b4",
    "metadata": {},
    "outputs": [
@@ -3920,7 +3920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 77,
    "id": "4e72d579",
    "metadata": {},
    "outputs": [],
@@ -3929,11 +3929,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "648784d1",
+   "cell_type": "raw",
+   "id": "9c0d06f1",
    "metadata": {},
-   "outputs": [],
    "source": [
     "model = ARIMA(data,order=())\n",
     "model.fit()\n",
@@ -3941,11 +3939,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdc44b15",
+   "cell_type": "raw",
+   "id": "b75d4c80",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#MSE \n",
     "np.sqrt(mean_squared_error(y, prediction))"
@@ -3964,14 +3960,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "c9af22fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "def arima_model(X,y,arima_order):\n",
-    "    for i in "
+    "    history = [i for i in X]\n",
+    "    prediction = list()\n",
+    "    for i in range(len(y)):\n",
+    "        model = ARIMA(data,order=())\n",
+    "        model_fit = model.fit()\n",
+    "        yhat = model.forecast()[0] \n",
+    "        prediction.append(yhat)\n",
+    "        history.append(y[t])\n",
+    "    mse = np.sqrt(mean_squared_error(y, prediction))\n",
+    "    return mse "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08dc55f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
